--- a/O1/Latex/introduzione.tex
+++ b/O1/Latex/introduzione.tex
@@ -1,4 +1,4 @@
 \section{Introduzione}
 
-Gli obiettivi di questa esperienza di laboratorio riguardante l'ambito fisico dell'ottica geometrica sono rispettivamente di ricavare il fuoco di una lente convergente e divergente, osservare e stimare la differenza tra il valore del fuoco della lente convergente  dovuta ai due fenomeni di aberrazione studiati,quella cromatica e quella sferica. Infine vogliamo trovare l'indice di rifrazione della lente convergente. 
+Gli obiettivi di questa esperienza di laboratorio riguardante l'ambito fisico dell'ottica geometrica sono rispettivamente di ricavare il fuoco di una lente convergente e divergente. Osserveremo gli effetti di aberrazione cromatica e sferica e in conclusione troveremo il valore dell'indice di rifrazione della lente convergente. 
 
