--- a/O1/Latex/Procedimento.tex
+++ b/O1/Latex/Procedimento.tex
@@ -104,20 +104,36 @@ Il sistema ideato funziona nel seguente modo: la lente divergente produce un'mma
 %	\frac{1}{f\ped{d}} \,=\, \frac{1}{p\ped{d}} + \frac{1}{x}
 %	\frac{1}{f\ped{c}} \,=\, \frac{1}{(D + x)} + \frac{1}{q\ped{c}}
 %\end{equation}
-
-\[ \left\{
-  \begin{array}{l l}
-    \frac{1}{f\ped{d}} \,=\, \frac{1}{p\ped{d}} + \frac{1}{x}\\
-    \frac{1}{f\ped{c}} \,=\, \frac{1}{(D + x)} + \frac{1}{q\ped{c}}
-  \end{array}
-\right.\]
+\begin{equation}
+ \left\{
+  \begin{aligned}
+    \frac{1}{f\ped{d}} & \,=\, \frac{1}{p\ped{d}} + \frac{1}{x}\\
+    \frac{1}{f\ped{c}} & \,=\, \frac{1}{(D + x)} + \frac{1}{q\ped{c}}
+  \end{aligned}
+\right.
+\end{equation}
 %
-possiamo ottenere i valori di $x$ e $f\ped{d}$. Inoltre per ottenere un valore più accurato di $f\ped{d}$ abbiamo tenuta ferma la distanza $p\ped{d}$ e abbiamo variato la distanza $D$ e quindi anche $q\ped{c}$, per tre volte. Quindi per ognuna tripletta abbiamo sfruttato la relazione (\ref{coniugati}) e abbiamo ottenuto tre valori di $f\ped{d}$. facndomne pertanto la media otterremo un valore più ccurato di $f\ped{d]$
+possiamo ottenere i valori di $x$ e $f\ped{d}$. Inoltre per ottenere un valore più accurato di $f\ped{d}$ abbiamo tenuta ferma la distanza $p\ped{d}$ e abbiamo variato la distanza $D$ e quindi anche $q\ped{c}$, per tre volte. Quindi per ognuna tripletta abbiamo sfruttato la relazione (\ref{coniugati}) e abbiamo ottenuto tre valori di $f\ped{d}$. Facendone pertanto la media otterremo un valore più accurato di $f\ped{d}$
 Quindi abbiamo ottenuto che:
 
 \begin{equation}
 	x \,=\, XXX \qquad \text{e} \qquad f\ped{d} \,=\, XXX
 \end{equation}
+
+Infine anche per questa lente abbiamo calcolato il valore della magnificazione. Quindi con i valori di $p\ped{d}$ e di $x$ sfruttando la relazione:
+\begin{equation}
+	|m| \,=\, \frac{x}{p\ped{d}} \,=\,
+\end{equation}
+dove $x$ non è altro che il valore di $q\ped{d}$
+%Ovvero conoscendo il valore di $m$ per la lente convergente abbiamo sfruttato la relazione:
+%\begin{equation}
+%	m \'=\' \frac{h\ped{imm}}{h\ped{ogg}} 
+%\end{equation}
+%e quindi abbiamo ricavato il valore dell'altezza dell'oggetto per la ente converegente, che però risulta essere nient'altro che l'altezza dell'immagine della lente divergente. Pertanto per ricavare la magnificazione di quest'ultima abbiamo applicato nuovamente la relazione:
+%\begin{equation}
+%	m \'=\' \frac{h\ped{ogg}}{h} 
+%\end{equation}
+%e abbiamo ottenuto che $m \'=\' XXX$ 
 
 \subsection{indice di rifrazione della lente convergente}
 
