--- a/O1/Latex/Materiale.tex
+++ b/O1/Latex/Materiale.tex
@@ -1,9 +1,9 @@
 \section{Materiale}
 
-Per queste esperienza di laboratorio il materiale che ci è stato messo a disposizione è il seguente:
+Per questa esperienza di laboratorio il materiale a disposizione è stato il seguente:
 \begin{itemize}
-	\item{due lenti: una convergente e una divergente;}
-	\item{una sorgente luminosa (una lampadina) con anteposta un immagine da proiettare;}
+	\item{due lenti, una convergente e una divergente, con relativi supporti;}
+    \item{una lampa con anteposta un immagine da proiettare (che fungerva da ``oggetto'', per usare un termine dell'ottica geometrica);}
 	\item{uno schermo, un calibro con una risoluzione di misura di 0.05 mm e un metro a nastro con risoluzione di misura di 1 mm;}
 	\item{vetrini monocromatici, uno rosso e uno blu;}
 	\item{due diaframmi per selezionare i raggi luminosi;}
