--- a/O1/Latex/introduzione.tex
+++ b/O1/Latex/introduzione.tex
@@ -1,5 +1,5 @@
 \section{Introduzione}
 
-Gli obiettivi di questa esperienza di laboratorio sono ricavare il fuoco di una lente (sia convergente, sia divergente),
-misurare gli effetti di aberrazione cromatica e sferica e calcolare il valore dell'indice di rifrazione della lente convergente. 
+Gli obiettivi di questa esperienza di laboratorio sono ricavare il fuoco di due lenti (una convergente e una divergente),
+misurare gli effetti di aberrazione cromatica e aberrazione sferica e il valore dell'indice di rifrazione della lente convergente. 
 
