--- a/O1/Latex/Materiale.tex
+++ b/O1/Latex/Materiale.tex
@@ -1,10 +1,11 @@
-\section{Materiale}
+\section{Materiale a disposizione:}
 
+%secondo me non serve questa premessa -->%%però ho notato che la pagine formatta meglio con... :P
 Per questa esperienza di laboratorio il materiale a disposizione è stato il seguente:
 \begin{itemize}
-	\item{due lenti, una convergente e una divergente, con relativi supporti;}
-    \item{una lampa con anteposta un immagine da proiettare (che fungerva da ``oggetto'', per usare un termine dell'ottica geometrica);}
-	\item{uno schermo, un calibro con una risoluzione di misura di 0.05 mm e un metro a nastro con risoluzione di misura di 1 mm;}
-	\item{vetrini monocromatici, uno rosso e uno blu;}
+	\item{due lenti, una convergente e una divergente, e uno schermo con relativi supporti;}
+    \item{una lampada con anteposta un'immagine da proiettare (l'\emph{Oggetto} nello schema in Figura \ref{fig:conv});}
+	\item{un calibro con una risoluzione di misura di 0.05 mm e un metro a nastro con risoluzione di misura di 1 mm;}
+	\item{due vetrini monocromatici, uno rosso e uno blu;}
 	\item{due diaframmi per selezionare i raggi luminosi;}
 \end{itemize}
